

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.vineesh.zeta_new.AboutUsfra">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:textColor="#9e9e9e"
                android:id="@+id/t1"
                android:text="A few Words"
                android:textStyle="bold"/>
            <TextView
                android:layout_toRightOf="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:id="@+id/t2"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:text="About us"
                android:textColor="#1b8ecd"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/t2"
                android:layout_marginTop="15dp"
                android:id="@+id/t3"
                android:text="@string/aboutus"
                android:textColor="#8c8c8c"/>
            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="36dp"
                android:orientation="horizontal"
                android:background="#31a7e8"
                android:gravity="center"
                android:id="@+id/l1"
                android:layout_marginTop="25dp"
                android:layout_below="@id/t3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:id="@+id/t4"
                    android:textStyle="bold"
                    android:layout_marginRight="35dp"
                    android:text="Vision"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision"
                android:id="@+id/t5"
                android:layout_below="@id/l1"
                android:textColor="#8b8b8b"/>
            <LinearLayout
                android:layout_width="104dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_below="@id/t5"
                android:background="#31a7e8"
                android:gravity="center"
                android:id="@+id/l2"
                android:layout_marginBottom="10dp"
                android:layout_height="36dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Mission"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l2"
                android:text="@string/mission"
                android:textColor="#8b8b8b"
                android:layout_marginBottom="75dp"
                />


        </RelativeLayout>
    </ScrollView>

</FrameLayout>
