<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.vineesh.zeta_new.InnovationFra">

<ScrollView
    android:layout_width="match_parent"
    android:id="@+id/s2"
    android:layout_height="wrap_content"
    android:layout_marginBottom="58dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="#ffffff"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/l1_inno"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="73dp"
            android:layout_marginTop="25dp"
            android:weightSum="2"

            android:layout_marginRight="73dp"
            android:layout_height="20dp">
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:text="Zeta"
                android:textColor="#585858"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="0dp"
                android:text="IT Division"
                android:textColor="#31a7e8"
                android:gravity="left"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:layout_weight="1.3"/>

        </LinearLayout>

        <TextView
            android:layout_marginLeft="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l1_inno"
            android:text="@string/zetaitdivision"
            android:textColor="#6d6d6d"
            android:id="@+id/t1_inno"
            />
        <RelativeLayout
            android:id="@+id/rl_inno"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:orientation="vertical"
            android:background="@drawable/itsoft"
            android:layout_below="@+id/t1_inno"
            android:layout_marginTop="25dp">
            <!--<TextView
                android:layout_width="156dp"
                android:layout_height="40dp"
                android:textColor="#ffffff"
                android:text="IT Software"
                android:gravity="center"
                android:layout_alignParentBottom="true"

               />-->

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="17dp"
            android:orientation="vertical"
            android:id="@+id/l2_inno"
            android:background="@drawable/border_color"
            android:layout_below="@id/rl_inno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#31a7e8"
                android:gravity="top"
                android:layout_marginLeft="7dp"
                android:text="@string/itsoftware"
                android:id="@+id/t2_inno"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:orientation="horizontal"
            android:layout_below="@id/l2_inno"
            android:id="@+id/l3_inno"
            android:background="@drawable/ithard"

            ></LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="2dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            android:layout_height="240dp"
            android:id="@+id/r2_inno"
            android:layout_marginTop="7dp"
            android:background="@drawable/border_color"
            android:layout_below="@id/l3_inno"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Our hardware supplies"
            android:textColor="#414141"
            android:id="@+id/t4_inno"
            android:layout_marginLeft="7dp"
            android:textStyle="bold"
            />
            <TextView
                android:layout_marginLeft="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/t4_inno"
                android:textColor="#31a7e8"
                android:text="@string/hardwaresupplies"
                android:layout_marginBottom="20dp"
                />
        </RelativeLayout>
            <LinearLayout
                android:paddingTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/r2_inno"
                android:id="@+id/l4_inno"
                android:background="@drawable/border_color"

                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="HardwareServices"
                    android:textStyle="bold"
                    android:textColor="#545454"
                    android:id="@+id/t5_inno"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="7dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/t5_inno"
                    >
                    <TextView
                        android:layout_marginLeft="7dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#31a7e8"
                        android:text="@string/ithardware_services"
                        />

                </LinearLayout>-->


            </LinearLayout>




    </RelativeLayout>

</ScrollView>
</FrameLayout>
